# wiringPi

./: Makefile.am  configure.ac
devLib/: Makefile.am
gpio/: Makefile.am
wiringPi/: Makefile.am
