noinst_LTLIBRARIES=libwiringPiDev.la
libwiringPiDev_la_SOURCES=ds1302.c maxdetect.c piNes.c gertboard.c piFace.c lcd128x64.c lcd.c piGlow.c
libwiringPiDev_la_CPPFLAGS=-I$(top_srcdir)/wiringPi/
otherincludedir = $(includedir)/wiringPi
otherinclude_HEADERS = ds1302.h font.h gertboard.h lcd128x64.h lcd.h maxdetect.h piFace.h piGlow.h piNes.h
